--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,13 @@
 html {
-  background-color: aquamarine;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
-    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color: rgb(255, 255, 255);
+  font-family: 'Bebas Neue', cursive;
+  height: 100%;
 }
 
 body {
   margin: 0;
+  height: 100%;
+  font-size: 18px;
 }
 
 header {
@@ -30,12 +32,12 @@ header nav ul li {
   padding: 10px;
   border: 2px solid black;
   border-radius: 13px;
-  background-color: rgb(165, 114, 114);
+  background-color: rgb(18, 64, 190);
 }
 
 header nav ul li a {
   text-decoration: none;
-  color: black;
+  color: rgb(255, 255, 255);
 }
 
 header nav {
@@ -44,13 +46,84 @@ header nav {
 
 .head-contact {
   display: flex;
-
+  width: 160px;
   align-items: center;
 }
 
 main {
   position: relative;
-  top: 120px;
+  top: 80px;
+}
+
+footer {
+  position: relative;
+  top: 80px;
+}
+
+.logo {
+  display: flex;
+  height: 350px;
+  text-align: center;
+  align-items: center;
+  background-image: url('../styles/img/ws_Clear_Blue_Sky_Lake_&_Mountain_1920x1080.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.logo-div {
+  display: flex;
+  width: 100%;
+  height: 120px;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(255, 255, 255);
+  font-family: ;
+}
+
+h1 {
+  font-size: 65px;
+  letter-spacing: 8px;
+  font-family: 'Permanent Marker', cursive;
+}
+
+h2 {
+  font-size: 32px;
+  letter-spacing: 3px;
+}
+
+h3 {
+  letter-spacing: 3px;
+}
+
+.aboutus {
+  display: flex;
+  width: auto;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  text-align: center;
+  align-content: center;
+  padding: 30px;
+  margin: 20px;
+  border: 4px solid black;
+  border-radius: 66px;
+  background-color: rgb(18, 10, 63);
+  color: white;
+}
+
+.content img {
+  max-height: 350px;
+  max-width: 350px;
+  text-align: center;
+}
+
+.heading {
+  text-align: center;
 }
 
 @media screen and (max-width: 650px) {
@@ -60,6 +133,14 @@ main {
     position: static;
     border: 1px solid grey;
     width: 100%;
+  }
+
+  main {
+    position: static;
+  }
+
+  footer {
+    position: static;
   }
 
   header nav {
